Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-47166

ForestDB hangs during initialisation on AArch64

    XMLWordPrintable

Details

    Description

      In our first test builds on ARM64, we were able to get a CE instance running (no EE due to compilation failures in nitro and plasma: MB-47146 ). However when trying to load a sample bucket, the UI locks up with a spinning wait wheel. Looking at the ps listing we can see "indexer" stuck at 100% CPU.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mihir.kamdar Mihir Kamdar (Inactive)
              ceej Chris Hillery
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty