MB-47166: Use correct SPIN_INITIALIZER value for AArch64

AArch64 (64bit ARM) was using the same SPIN_INITIALIZER value (1) as
x86; which is incorrect. Update arch.h to use the correct value of 0.

This allows most of the forestdb tests to pass on AArch64, where
previously they hung in filemgr init:

    (gdb) bt
    #0  0x0000ffff981a3b40 in pthread_spin_lock () from /lib64/libpthread.so.0
    #1  0x000000000041871c in filemgr_init (config=config@entry=0xfffffe6e3d00) at ../forestdb/src/filemgr.cc:269
    #2  0x000000000042ccf0 in filemgr_open (filename=filename@entry=0x468f80 "./bcache_testfile", ops=0x4f6aa0 <linux_ops>, config=config@entry=0xfffffe6e3d00, log_callback=log_callback@entry=0x0) at ../forestdb/src/filemgr.cc:828
    #3  0x000000000040532c in basic_test2 () at ../forestdb/tests/unit/bcache_test.cc:102
    #4  0x0000000000405de8 in main () at ../forestdb/tests/unit/bcache_test.cc:258

Change-Id: Ia5fb533a0809fc5215d7563b664ac1bbd1e9fac7
Reviewed-on: http://review.couchbase.org/c/forestdb/+/159301
Reviewed-by: Srinath Duvuru <srinath.duvuru@couchbase.com>
Reviewed-by: James H <james.harrison@couchbase.com>
Tested-by: Dave Rigby <daver@couchbase.com>